Update button IDs and classes in index.html

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     </div>
                 </div>
                 
-                <button type="button" onclick="startMeeting()" ontouchstart="" class="btn btn-primary w-100 fw-bold py-3 rounded-pill shadow-sm transition-all">
+                <button type="button" id="start-btn" onclick="startMeeting()" class="btn btn-primary w-100 fw-bold py-3 rounded-pill shadow-sm transition-all">
                     HYR NË TAKIM <i class="fas fa-arrow-right ms-2"></i>
                 </button>
                 
@@ -188,7 +188,7 @@
                     <h6 class="small fw-bold text-info"><i class="fas fa-poll me-2"></i>Sondazh Live</h6>
                     <div id="poll-area">
                         <p class="x-small text-muted mb-2">Merrni opinionin e grupit menjëherë.</p>
-                        <button onclick="startPoll()" class="btn btn-sm btn-outline-info w-100 rounded-pill">Krijo Sondazh</button>
+                        <button onclick="startPoll()" class="btn btn-sm btn-outline-info shorthand-btn w-100 rounded-pill">Krijo Sondazh</button>
                     </div>
                 </div>
             </aside>
