--- a/index.html
+++ b/index.html
@@ -246,6 +246,6 @@
             alert("Emri: Çfarë të dëshironi\nFjalëkalimi: 1234");
         }
     </script>
-    <script src="zoom.js"></script>
+    <script src="zoom.js?v=99"></script>
 </body>
 </html>
