--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/selfie_segmentation"></script>
     
-    <link rel="stylesheet" href="zoom.css">
+    <link rel="stylesheet" href="zoom/zoom.css">
     <style>
         /* Rregullime për t'u përshtatur në çdo ekran (Responsive) */
         html, body {
@@ -246,6 +246,6 @@
             alert("Emri: Çfarë të dëshironi\nFjalëkalimi: 1234");
         }
     </script>
-    <script src="zoom.js?v=99"></script>
+   <script src="zoom/zoom.js?v=1.2"></script>
 </body>
 </html>
