--- a/index.html
+++ b/index.html
@@ -71,7 +71,6 @@
             box-shadow: 0 0 25px rgba(13, 110, 253, 0.5);
         }
 
-        /* Perdoruesi ne liste */
         .participant-item {
             background: rgba(255, 255, 255, 0.05);
             transition: all 0.2s ease;
@@ -92,6 +91,18 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+        }
+
+        /* Klasa për butonin Record kur është aktiv */
+        .recording-active {
+            background-color: #dc3545 !important;
+            animation: pulse-red 1.5s infinite;
+        }
+
+        @keyframes pulse-red {
+            0% { box-shadow: 0 0 0 0 rgba(220, 53, 69, 0.7); }
+            70% { box-shadow: 0 0 0 10px rgba(220, 53, 69, 0); }
+            100% { box-shadow: 0 0 0 0 rgba(220, 53, 69, 0); }
         }
     </style>
 </head>
@@ -236,6 +247,15 @@
             <div class="d-flex gap-2">
                 <button id="mic-btn" class="btn btn-dark rounded-circle p-3"><i class="fas fa-microphone"></i></button>
                 <button id="camera-btn" class="btn btn-dark rounded-circle p-3"><i class="fas fa-video"></i></button>
+                <button id="screen-btn" onclick="toggleScreenShare()" class="btn btn-dark rounded-circle p-3" title="Shpërndaj Ekranin">
+                    <i class="fas fa-desktop"></i>
+                </button>
+                <button id="blur-btn" onclick="toggleBlur()" class="btn btn-dark rounded-circle p-3" title="AI Blur Background">
+                    <i class="fas fa-user-shield"></i>
+                </button>
+                <button id="record-btn" onclick="toggleRecord()" class="btn btn-dark rounded-circle p-3 text-danger" title="Regjistro">
+                    <i class="fas fa-circle"></i>
+                </button>
             </div>
 
             <div class="d-flex gap-2 gap-md-3">
@@ -257,6 +277,6 @@
             alert("Aksesimi:\n1. Shkruaj emrin tënd.\n2. Fjalëkalimi është: 1234\n3. Kopjo ID-në tënde dhe dërgoja partnerit.");
         }
     </script>
-    <script src="zoom/zoom.js?v=2.1"></script>
+    <script src="zoom/zoom.js?v=2.2"></script>
 </body>
 </html>
